# bolt

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  bolt.pyproj  bolt.sln  boltfile.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.pyproj
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release.yml
.github/workflows/: build.yml  python-release-pypi.yml  python-verify-library.yml  release.yml
bolt/: __init__.py  _btapp.py  _btconfig.py  _bterror.py  _btoptions.py  _btregistry.py  _btrunner.py  _btutils.py  about.py  api.py  errors.py
bolt/tasks/: __init__.py  bolt_conttest.py  bolt_coverage.py  bolt_delete_files.py  bolt_git.py  bolt_mkdir.py  bolt_nose.py  bolt_pip.py  bolt_set_vars.py  bolt_setup.py  bolt_shell.py  bolt_sleep.py  delete_files.py
bolt/utils/: __init__.py  _utconfig.py  _utfiles.py  log.py
docs/: Makefile  contribute.md  docs.pyproj  index.md  make.bat  todo_list.md  using_bolt.md
docs/source/: conf.py  contribute.rst  index.rst  todo_list.rst  using_bolt.rst
docs/source/_static/: dummy.txt
docs/source/bolt/: package.rst
docs/source/dg/: developers_guide.rst
docs/source/rg/: reference_guide.rst
docs/source/ug/: provided_tasks.rst  users_guide.rst
docs/source/using/: custom_tasks.rst  disecting_boltfile.rst  getting_started.rst  provided_tasks.rst
docs/using/: custom_tasks.md  disecting_boltfile.md  getting_started.md  provided_tasks.md
src/bolt/: __init__.py  _btapp.py  _btconfig.py  _btoptions.py  _btregistry.py  _btrunner.py  _btutils.py  about.py  api.py  errors.py  project.py
src/bolt/tasks/: bolt_conttest.py  bolt_coverage.py  bolt_delete_files.py  bolt_mkdir.py  bolt_nose.py  bolt_pip.py  bolt_set_vars.py  bolt_setup.py  bolt_shell.py  bolt_sleep.py
src/bolt/utils/: __init__.py  _utconfig.py  _utfiles.py  _uttime.py
test/: test_api.py  test_bolt.py  test_btapp.py  test_btconfig.py  test_btoptions.py  test_btregistry.py  test_btrunner.py  test_btutils.py  test_errors.py  test_log.py  test_project.py
test/test_tasks/: _mocks.py  test_bolt_conttest.py  test_bolt_coverage.py  test_bolt_delete_files.py  test_bolt_mkdir.py  test_bolt_nose.py  test_bolt_pip.py  test_bolt_set_vars.py  test_bolt_setup.py  test_bolt_shell.py  test_bolt_sleep.py  test_delete_files.py
test/test_utils/: test_utconfig.py  test_utfiles.py  test_uttime.py
