[project]
name = "bolt-ta"
version = "0.4.1"
description = "A simple task runner written in Python"
readme = "README.md"
authors = [{ name = "Abantos", email = "oss.abantos@outlook.com" }]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/abantos/bolt"
Documentation = "https://bolt-task-automation.readthedocs.io/en/latest/"
Repository = "https://github.com/abantos/bolt"

[project.scripts]
bolt = "bolt:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bolt"]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "conttest>=0.0.8",
    "coverage>=7.6.1",
    "docutils<0.21",
    "m2r2>=0.3.3.post2",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-github-report>=0.0.1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.bolt.project]
package = "bolt"
copyright = "2016, Abantos"
